# fuar--gta

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  setup_workspace.sh
src/fair_robot_bringup/: CMakeLists.txt  package.xml
src/fair_robot_control/: CMakeLists.txt  package.xml
src/fair_robot_description/: CMakeLists.txt  package.xml
src/fair_robot_description/urdf/: robot.urdf.xacro  robot.xacro
src/fair_robot_gazebo/: CMakeLists.txt  package.xml
src/fair_robot_perception/: CMakeLists.txt  package.xml
src/fair_robot_planning/: CMakeLists.txt  package.xml
src/fair_robot_state_machine/: CMakeLists.txt  package.xml
src/fair_robot_teleop/: CMakeLists.txt  package.xml
src/taxi_sim_bringup/: CMakeLists.txt  package.xml
src/taxi_sim_bringup/launch/: taxi_sim.launch
src/taxi_sim_bringup/nodes/: drive_mode_toggle.py  keyboard_translator.py
